maybe fixed the overflow

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 html {
   height: 100vh;
   width: 100vw;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -14,7 +14,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
-  overflow-y: hidden;
+  overflow: hidden;
   background-color: #BFE6FE;
 }
 
